alignment fixes and content modifications

--- a/src/styles/AboutPage.scss
+++ b/src/styles/AboutPage.scss
@@ -23,8 +23,8 @@
 
 .propic {
   margin: 2rem;
-  width: 25vh;
-  height: 25vh;
+  width: 20vh;
+  height: 20vh;
   border-radius: 2.5rem;
   object-fit: cover;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
