--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   padding: 10px 20px;
+  padding: 0.65%;
   background-color: rgba(10, 25, 47, 0.65);
   backdrop-filter: blur(10px);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
