--- a/src/styles/TimelineComponent.scss
+++ b/src/styles/TimelineComponent.scss
@@ -8,7 +8,7 @@
 
   .timeline-line {
     position: absolute;
-    width: 0.25rem;
+    width: 0.3rem;
     background-color: #252525;
     top: 0;
     bottom: 0;
